Add entry point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ ruff = "*"
 vulture = "*"
 
 [tool.poetry.scripts]
-rest-docstring-checker = "rest_docstring_checker.cli:main_cli"
+rest-docstring-checker = "rest_docstring_checker.main:main"
 
 [tool.mypy]
 python_version = "3.12"
