Update python version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT license"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "~3.12"
+python = "^3.11"
 docstring-parser = "~0.15.0"
 
 [tool.poetry.group.dev.dependencies]
