--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,25 @@
 [tool.poetry]
 name = "rest-docstring-checker"
 version = "0.0.1"
-description = "This repository contains a Python utility tool for checking adherence to PEP 287 – reStructuredText (reST) Docstring Format. It validates docstrings in Python files against the reST format. It's a handy tool for developers seeking to maintain docstring readability and consistency with function headers.."
+description = "This repository contains a Python utility tool for checking adherence to PEP 287 - reStructuredText (reST) Docstring Format. It validates function docstrings in Python files against the reST format."
 authors = [ "Casper Lindberg <casper.lindberg@outlook.com>" ]
 license = "MIT license"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<3.13"
+python = ">=3.10, <4.0"
 docstring-parser = "~0.15.0"
 
+[tool.poetry.group.dev]
+optional = true
+
 [tool.poetry.group.dev.dependencies]
-black = "*"
-mypy = "*"
-pre-commit = "*"
-ruff = "*"
-vulture = "*"
+black = "~23.7.0"
+mypy = "~1.5.1"
+pre-commit = "~3.5.0"
+pytest = "~7.4.2"
+ruff = "~0.0.286"
+vulture = "~2.9.1"
 
 [tool.poetry.scripts]
 rest-docstring-checker = "rest_docstring_checker.__main__:main"
@@ -23,6 +27,7 @@ rest-docstring-checker = "rest_docstring_checker.__main__:main"
 [tool.mypy]
 python_version = "3.12"
 cache_dir = ".cache/mypy/"
+ignore_missing_imports = true
 check_untyped_defs = true
 no_implicit_optional = true
 
@@ -53,15 +58,6 @@ select = [
     "UP",     # pyupgrade
     "W",      # pycodestyle warnings
 ]
-ignore = [
-    "G001", # logging-string-format
-    "G003", # logging-string-concat
-    "G004", # logging-f-string
-]
-
-[build-system]
-requires = [ "poetry-core" ]
-build-backend = "poetry.core.masonry.api"
 
 [tool.ruff.per-file-ignores]
 # Do not complain if __init__.py files have unused imports.
@@ -71,3 +67,10 @@ build-backend = "poetry.core.masonry.api"
     "ANN201",
     "S101",
 ]
+
+[tool.pytest.ini_options]
+testpaths = "tests"
+
+[build-system]
+requires = [ "poetry-core" ]
+build-backend = "poetry.core.masonry.api"
