--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ black = "~23.7.0"
 mypy = "~1.5.1"
 pre-commit = "~3.5.0"
 pytest = "~7.4.2"
+pytest-cov = "~4.1.0"
 ruff = "~0.0.286"
 vulture = "~2.9.1"
 
