--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -46,7 +46,7 @@ jobs:
         run: poetry install --no-interaction
 
       - name: Run pre-commit
-        run: poetry run pre-commit run --all-files
+        run: pre-commit install && poetry run pre-commit run --all-files
 
       - name: Run tests
         run: poetry run python -m pytest --cov
