--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,48 +12,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
+      matrix:
+        python-version: [3.12]
       fail-fast: true
 
     steps:
-      - name: Check out repository
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        id: setup-python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-
-      - name: Load cached venv
-        id: cached-poetry-dependencies
-        uses: actions/cache@v3
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Install dependencies
-        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root --with dev
-
-      - uses: pre-commit/action@v3.0.0
-        with:
-          extra_args: --all-files
+      - name: Run pre-commit
+        run: make run_pre_commit
 
       - name: Run tests
-        run: poetry run python -m pytest --cov
-        continue-on-error: false
-
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        with:
-          fail_ci_if_error: true # error handling
-          verbose: true
+        run: make run_tests
